--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -7,7 +7,7 @@
 nav{
     width: 100%;
     background-color: white ;
-    color: white;
+    color: black;
     height: 100px;
     display: flex;
     justify-content: space-around;
