--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -12,9 +12,8 @@ nav{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    /*padding: 0.5rem calc((100vw - 1000px) / 2);*/
-    /*z-index: 10;*/
     border-bottom: 2px solid blue;
+    list-style-type: none;
 }
 
 .navbar-links {
